[workspace]
members = [
    "flyway",
    "flyway-codegen",
    "flyway-sql-changelog",
    "flyway-rbatis",
    "example"
]

[workspace.package]
version = "0.3.2"
edition = "2021"
description = "Flyway-rs project, Database change control,similar to flyway  in Java"
authors = ["tdcare <tzw@tdcare.cn>"]
license = "MIT"

categories = ["database"]
keywords = ["database", "sql", "migrations", "orm","rbatis"]
repository = "https://github.com/tdcare/flyway-rs"
homepage = "https://github.com/tdcare/flyway-rs"
readme = "README.md"

[workspace.dependencies]
flyway-sql-changelog={version="0.3.2",path = "./flyway-sql-changelog"}
flyway-codegen={version="0.3.2",path = "./flyway-codegen",features = ["debug_mode"]}
flyway-rbatis={version="0.3.2",path = "./flyway-rbatis"}
flyway={version="0.3.2",path = "./flyway"}
