[package]
name = "flyway-codegen"
description.workspace=true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
#readme = "README.md"
exclude = [
    "examples"
]

[lib]
proc-macro = true

[features]
debug_mode=[]


[dependencies]
flyway-sql-changelog={version = "0.2.2",path = "../flyway-sql-changelog"}


syn={version = "1.0.98",features = [ "full" ]}

quote={version = "1.0.20"}


proc-macro2={version = "1.0.40"}

serde={version = "1.0.152",features = ["derive"]}

