[package]
name = "flyway-rbatis"
version = "0.2.1"
edition = "2021"

description = "Part of Flayway-rs. Contains driver implementations for Rbatis."
authors = ["tdcare <tzw@tdcare.cn>"]
license = "MIT"

categories = ["database"]
keywords = ["database", "sql", "migrations", "orm"]
repository = "https://github.com/tdcare/flyway-rs"
homepage = "https://github.com/tdcare/flyway-rs"
#readme = "README.md"
exclude = [
    "examples"
]
[dependencies]
flyway={version = "0.2.1",path = "../flyway"}
log = "0.4.17"
serde = { version = "1", features = ["derive"] }

rbatis = {version="4.3.0",features = ["debug_mode"]} #必选
rbs={version="4.3.0"}
rbdc={version="4.3.0"}

async-trait={version = "0.1.64"}


tokio={version = "1.26.0"}