[package]
name = "flyway-rbatis"
description.workspace=true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
#readme = "README.md"
exclude = [
    "examples"
]
[dependencies]
flyway={path = "../flyway"}
log = "0.4.17"
serde = { version = "1", features = ["derive"] }

rbatis = {version="4.5",features = ["debug_mode"]} #必选
rbs={version="4.5"}
rbdc={version="4.5"}

async-trait={version = "0.1.64"}


tokio={version = "1.26.0"}