[package]
name = "flyway-sql-changelog"
description.workspace=true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
#readme = "README.md"
exclude = [
    "examples"
]

[dependencies]
serde={version = "1.0.152",features = ["derive"]}
serde_yaml={version = "0.9.17"}
log = "0.4.17"
siphasher = "0.3"
