[package]
name = "flyway"
description.workspace=true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

exclude = [
    "examples"
]

[dependencies]
log = "0.4.17"

flyway-codegen={path = "../flyway-codegen",features = ["debug_mode"]}
flyway-sql-changelog={path = "../flyway-sql-changelog"}


async-trait={version = "0.1.64"}

