[package]
name = "flyway"
description.workspace=true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

exclude = [
    "examples"
]

[dependencies]
log = "0.4.17"

flyway-codegen={workspace = true}
flyway-sql-changelog= {workspace = true}


async-trait={version = "0.1.64"}

